# reporters-db

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.rst
reporters_db/data/: regexes.json  reporters.csv
src/: case_name_part_abbreviations.rs  journals.rs  laws.rs  lib.rs  regexes.rs  reporters.rs  state_abbreviations.rs  utils.rs
